--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vv-preview-demo-page",
   "private": true,
   "version": "0.0.0",
+  "packageManager": "pnpm@9.11.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
