Change: 相対URLでビルドする

--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -1,11 +1,6 @@
 name: "Build Page"
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    types:
-      - synchronize
 
 jobs:
   update_pages:
@@ -30,12 +25,7 @@ jobs:
 
       - name: Build
         run: |
-          if [ -n "${{ github.event.pull_request.number }}" ]; then
-            BASE_URL=/vv-preview-bot/pr-${{ github.event.pull_request.number }}
-          else
-            BASE_URL=/vv-preview-bot/${{ github.base_ref }}
-          fi
-          pnpm run build --base=$BASE_URL
+          pnpm run build --base=./
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
