--- a/.github/workflows/trigger_bot.yml
+++ b/.github/workflows/trigger_bot.yml
@@ -3,6 +3,7 @@ name: "Trigger Bot"
 on:
   pull_request_target:
     types:
+      - opened
       - synchronize
   push:
     branches:
@@ -14,5 +15,6 @@ jobs:
     steps:
       - name: Trigger Bot
         run: |
-          GITHUB_TOKEN=${{ secrets.MY_TOKEN }} gh workflow run -R sevenc-nanashi/vv-preview-demo-bot update_pages.yml
-
+          gh workflow run -R sevenc-nanashi/vv-preview-demo-bot update_pages.yml
+        env:
+          GH_TOKEN: ${{ secrets.MY_TOKEN }}
